Updated the README file and the Version.html file to the new version 5.7.0

--- a/Version.html
+++ b/Version.html
@@ -1,5 +1,5 @@
-CANTER Processing Tool - IT-AFM Data Analysis.<br>
-Version 5.6.1<br>
+CANTER Processing Toolbox - Force Volume Data Analysis.<br>
+Version 5.7.0<br>
 Copyright (C) since 2018<br>
 Bastian Hartmann & Lutz Fleischhauer<br>
 <br>
